--- a/frontend/locales/en/common.json
+++ b/frontend/locales/en/common.json
@@ -13,7 +13,7 @@
     "noseStyle": "Nose",
     "shirtStyle": "Shirt"
   },
-  "betaWarning": "This application is in beta stage. If you find any issue or have any feedback, feel free to reach me: ",
+  "betaWarning": "This application is in beta stage. If you find any issue or have any feedback, feel free to reach me:",
   "count": {
     "game_one": "{{count}} game",
     "game_other": "{{count}} games",
@@ -40,11 +40,6 @@
   },
   "GameCard": {
     "see": "See the game"
-  },
-  "GameDashboard": {
-    "events": "Events",
-    "podium": "Podium",
-    "timeline": "Timeline"
   },
   "GameForm": {
     "actionsField": "Actions",
@@ -77,7 +72,7 @@
   },
   "gameUrlNotValid": "The URL is not valid (the password may be incorrect)",
   "NavBar": {
-    "games": "Games created / joined"
+    "games": "Games created"
   },
   "PlayerActionSelector": {
     "label": "Action to complete"
@@ -85,5 +80,8 @@
   "PlayerStatusBadge": {
     "alive": "Alive",
     "dead": "Dead"
+  },
+  "Unauthorized": {
+    "title": "You do not have access to this page!"
   }
 }
