--- a/frontend/locales/fr/game-dashboard.json
+++ b/frontend/locales/fr/game-dashboard.json
@@ -1,3 +1,6 @@
 {
-  "title": "Dashboard de la partie"
+  "title": "Dashboard de la partie",
+  "GameEditButton": {
+    "button": "Modifier la partie"
+  }
 }
