--- a/frontend/locales/en/player-dashboard.json
+++ b/frontend/locales/en/player-dashboard.json
@@ -1,9 +1,14 @@
 {
   "KilledQrCodeButton": {
-    "showQrCode": "Display QR code when killed",
     "modal": {
       "title": "Show this QR code to the player who killed you."
-    }
+    },
+    "showQrCode": "Display QR code when killed"
+  },
+  "PlayerDashboardGameFinished": {
+    "headline": "I hope you enjoyed the game.",
+    "title": "The game finished.",
+    "youKilled": "You killed"
   },
   "PlayerDashboardGameStarted": {
     "dear": "Dear {{player}},",
@@ -25,5 +30,6 @@
     "thereIsPlayerCount_one": "There is already {{count}} player in the game.",
     "thereIsPlayerCount_other": "There is already {{count}} players in the game.",
     "title": "You are in! The game will start soon."
-  }
+  },
+  "title": "Player dashboard"
 }
