fix(frontend): fix some translations

--- a/frontend/locales/en/common.json
+++ b/frontend/locales/en/common.json
@@ -2,6 +2,7 @@
   "appName": "Killer game",
   "appNameLong": "Killer game generator",
   "AvatarEditor": {
+    "title": "Setup the avatar",
     "bgColor": "color",
     "earSize": "Ear",
     "faceColor": "Skin",
