--- a/frontend/locales/en/toasts.json
+++ b/frontend/locales/en/toasts.json
@@ -1,7 +1,7 @@
 {
   "player": {
     "created": {
-      "success": "{{player}} à rejoin la partie.",
+      "success": "{{player}} à rejoint la partie.",
       "error": "Une erreur est survenue, le joueur {{player.name}} n'a pas été crée."
     },
     "updated": {
