feat(frontend): display joined parties

--- a/frontend/locales/en/games-created.json
+++ b/frontend/locales/en/games-created.json
@@ -3,5 +3,9 @@
   "GamesCreated": {
     "title": "Games created",
     "youDontHaveGames": "You did not created games yet..."
+  },
+  "GamesJoined": {
+    "title": "Games joined",
+    "youDontHaveGames": "You did not joined any games yet..."
   }
 }
