--- a/frontend/locales/fr/games-created.json
+++ b/frontend/locales/fr/games-created.json
@@ -3,5 +3,9 @@
   "GamesCreated": {
     "title": "Parties crées",
     "youDontHaveGames": "Vous n'avez crée aucune parties pour le moment..."
+  },
+  "GamesJoined": {
+    "title": "Parties participé",
+    "youDontHaveGames": "Vous n'avez participé à aucune parties pour le moment..."
   }
 }
