--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -299,9 +299,7 @@
     },
     "headline": "Tu organises un événement et tu veux que tout le monde apprenne à se connaître? Tu es au bon endroit!",
     "HomeHeroCardContent": {
-      "create": "Créer une partie",
-      "join": "Rejoindre une partie",
-      "or": "OU"
+      "createOrView": "Créer ou voir une partie"
     },
     "HowDoesItWork": {
       "descriptions": [
