--- a/frontend/locales/fr/player-dashboard.json
+++ b/frontend/locales/fr/player-dashboard.json
@@ -17,8 +17,8 @@
     "youKilledCount_zero": "Tu n'as encore tué personne."
   },
   "PlayerDashboardGameStartedKillCard": {
-    "communicateYourKilledToken": "Communiques ton code secret.",
-    "onceDone": "Une fois l'action effectuée, demandez-lui son code secret et saisissez-le dans le formulaire ci-dessous.",
+    "presentQrCode": "Si vous vous faites tuer, présentez votre code QR au joueur, il le scannera pour valider le meurtre. N'essayez pas de le scanner vous-même, sinon vous vous ferez (bêtement) tuer.",
+    "onceDone": "Une fois l'action effectuée, demandez-lui son QR code et scannez le pour l'éliminer.",
     "or": "OU",
     "youGetKilled": "Tu as été éliminé?",
     "youNeedToKill": "Tu dois tuer",
