--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -70,12 +70,8 @@
     },
     "betaWarning": "Cette application est en phase bêta. Si vous rencontrez des problèmes ou si vous avez des commentaires, n'hésitez pas à me contacter :",
     "count": {
-      "game_one": "{{count}} partie",
-      "game_other": "{{count}} parties",
-      "game_zero": "{{count}} parties",
-      "player_one": "{{count}} joeur",
-      "player_other": "{{count}} joueurs",
-      "player_zero": "{{count}} joueurs"
+      "game": "{count, plural, =0 {# parties} =1 {# parties} other {# parties}",
+      "player": "{count, plural, =0 {# joueurs} =1 {# joueur} other {# joueurs}"
     },
     "dashboard": {
       "events": "Événements",
@@ -179,8 +175,8 @@
   "game-join": {
     "title": "Rejoindre de la partie",
     "GameJoinContent": {
-      "thereIsAlreadyXPlayers_one": "Il y a déjà {{count}} joueur dans la partie.",
-      "thereIsAlreadyXPlayers_other": "Il y a déjà {{count}} joueurs dans la partie."
+      "thereIsAlreadyXPlayers_one": "Il y a déjà {count} joueur dans la partie.",
+      "thereIsAlreadyXPlayers_other": "Il y a déjà {count} joueurs dans la partie."
     }
   },
   "games-created": {
@@ -263,25 +259,25 @@
     "GameTutorialExample": {
       "step1": {
         "title": "Vous mettez en place la partie",
-        "desc": "Admettons que vous avez trois joueurs: <0>{{player1}}</0>, <0>{{player2}}</0> & <0>{{player3}}</0>."
+        "desc": "Admettons que vous avez trois joueurs: <0>{player1}</0>, <0>{player2}</0> & <0>{player3}</0>."
       },
       "step2": {
         "title": "Nous organisons le tournois",
         "desc1": "Après les avoir enregistrés, l'application fera se rencontrer tous les joueurs.",
-        "desc2": "Donc dans le premier exemple, <0>{{player1}}</0> doit faire en sorte que <0>{{player2}}</0> effectue <0>{{action1}}</0>",
-        "desc3": "S'il réussi, <0>{{player2}}</0> est hors jeu et <0>{{player1}}</0> reprend son action a effectuer.",
+        "desc2": "Donc dans le premier exemple, <0>{player1}</0> doit faire en sorte que <0>{player2}</0> effectue <0>{action1}</0>",
+        "desc3": "S'il réussi, <0>{player2}</0> est hors jeu et <0>{player1}</0> reprend son action a effectuer.",
         "desc4": "Voyons ce qu'il se passe..."
       },
       "step3": {
         "title": "Commençons la partie!",
         "desc1": "Vous communiquez les actions à tout le monde, et la partie commence. Chaque joueur essaiera de manipuler l'autre et de cacher ses actions.",
-        "desc2": "Quelques minutes plus tard, il y a un premier meurtre: <0>{{player1}}</0> a réussi à faire en sorte que <0>{{player2}}</0> fasse <0>{{action1}}</0>.",
-        "desc3": "Donc <0>{{player2}}</0> est maintenant mort (hors-jeu) et il ne peut plus participer. <0>{{player1}}</0> prend son action, il doit maintenant faire en sorte que <0>{{player3}}</0> fasse <0>{{action2}}</0>."
+        "desc2": "Quelques minutes plus tard, il y a un premier meurtre: <0>{player1}</0> a réussi à faire en sorte que <0>{player2}</0> fasse <0>{action1}</0>.",
+        "desc3": "Donc <0>{player2}</0> est maintenant mort (hors-jeu) et il ne peut plus participer. <0>{player1}</0> prend son action, il doit maintenant faire en sorte que <0>{player3}</0> fasse <0>{action2}</0>."
       },
       "step4": {
         "title": "Dernier meurtre et fin de la partie",
-        "desc1": "Finalement, notre bien aimé <0>{{player1}}</0> a été tué par <0>{{player3}}</0> parce qu'il a fait <0>{{action3}}</0>...",
-        "desc2": "Comme il ne reste plus qu'un joueur en vie, la partie s'arrête. <0>{{player3}} a remporté la partie!</0>"
+        "desc1": "Finalement, notre bien aimé <0>{player1}</0> a été tué par <0>{player3}</0> parce qu'il a fait <0>{action3}</0>...",
+        "desc2": "Comme il ne reste plus qu'un joueur en vie, la partie s'arrête. <0>{player3} a remporté la partie!</0>"
       }
     }
   },
@@ -378,9 +374,9 @@
       "youKilled": "Tu as tué"
     },
     "PlayerDashboardGameStarted": {
-      "dear": "Bonjour {{player}},",
-      "youKilledCount_one": "Tu as déjà tué {{count}} joueur.",
-      "youKilledCount_other": "Tu as déjà tué {{count}} joueurs.",
+      "dear": "Bonjour {player},",
+      "youKilledCount_one": "Tu as déjà tué {count} joueur.",
+      "youKilledCount_other": "Tu as déjà tué {count} joueurs.",
       "youKilledCount_zero": "Tu n'as encore tué personne."
     },
     "PlayerDashboardGameStartedKillCard": {
@@ -394,33 +390,34 @@
     },
     "PlayerDashboardGameUnStarted": {
       "gameWillStartSoon": "L'administrateur de la partie va démarrer la partie dans quelques instants.",
-      "thereIsPlayerCount": "Il y a déjà {{count}} joueurs dans la partie.",
+      "thereIsPlayerCount": "Il y a déjà {count} joueurs dans la partie.",
       "title": "Tu es inscris! La partie va démarrer dans quelques instants"
     },
     "title": "Tableau de bord"
   },
   "player-kill": {
-    "title": "Eliminer un joueur",
+    "title": "Éliminer un joueur",
     "PlayerKillPage": {
       "badRequest": "Une erreur est survenue. Peut-être que le lien est invalide ou que le joueur a déjà été éliminé",
       "confirm": "Confirmer!",
       "headline": "Je veux dire, êtes vous sûr de l'éliminer. C'était un bon joueur après tout...",
-      "youAreKilling": "Vous êtes sur le point d'éliminer "
+      "youAreKilling": "Vous êtes sur le point d'éliminer ",
+      "wellDone": "Bien joué! Vous pouvez revenir à votre dashboard pour connaître votre prochaine cible."
     }
   },
   "toasts": {
     "player": {
       "created": {
-        "success": "{{player}} joined the game.",
-        "error": "An error occurred, the player {{player.name}} was not created."
+        "success": "{player} joined the game.",
+        "error": "An error occurred, the player {player.name} was not created."
       },
       "updated": {
-        "success": "{{player}} was updated.",
-        "error": "An error occurred, the player {{player.name}} was not updated."
+        "success": "{player} was updated.",
+        "error": "An error occurred, the player {player.name} was not updated."
       },
       "removed": {
-        "success": "{{player}} leaved the game.",
-        "error": "An error occurred, the player {{player.name}} was not removed."
+        "success": "{player} leaved the game.",
+        "error": "An error occurred, the player {player.name} was not removed."
       }
     }
   }
