--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -70,8 +70,8 @@
     },
     "betaWarning": "Cette application est en phase bêta. Si vous rencontrez des problèmes ou si vous avez des commentaires, n'hésitez pas à me contacter :",
     "count": {
-      "game": "{count, plural, =0 {# parties} =1 {# parties} other {# parties}",
-      "player": "{count, plural, =0 {# joueurs} =1 {# joueur} other {# joueurs}"
+      "game": "{count, plural, =0 {# parties} =1 {# parties} other {# parties}}",
+      "player": "{count, plural, =0 {# joueurs} =1 {# joueur} other {# joueurs}}"
     },
     "dashboard": {
       "events": "Événements",
