feat(frontend): add language switcher

--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -87,7 +87,7 @@
       "github": "Code source (Github)",
       "help": "Comment marche une partie de Killer?",
       "sitemap": "Plan du site",
-      "switchLang": "🇫🇷 English version"
+      "switchLang": "🇬🇧 English version"
     },
     "GameCard": {
       "see": "Voir la partie"
