fix(frontend): remove `<Head>` usage

--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -48,7 +48,7 @@
     "GameCreateCard": {
       "title": "So you want to organize a Killer game?"
     },
-    "headline": "Finding ideas for action is not easy.",
+    "headline": "Finding ideas for action is not easy. We provide you few good examples.",
     "title": "Action list for a game of Killer"
   },
   "common": {
