--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -49,7 +49,7 @@
     "GameCreateCard": {
       "title": "Vous cherchez à organiser une partie de Killer?"
     },
-    "headline": "Trouver des idées d'actions n'est pas facile.",
+    "headline": "Trouver des idées d'actions n'est pas facile. Nous vous proposons quelques examples.",
     "title": "Liste d'actions pour une partie de Killer"
   },
   "common": {
