--- a/api/todo.txt
+++ b/api/todo.txt
@@ -16,7 +16,7 @@ x 2023-11-18 implement game finished in dashboard
 x 2023-11-18 ntfy
 @maybe public game dashboard
 x 2023-11-17 page when player is dead
-@maybe qr code
+x 2024-06-13 @maybe qr code
 x 2023-11-15 finish actions page
 add link of joined games
 @maybe add game configuration (ex: allow display user during the game)
