--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -231,6 +231,7 @@
     },
     "PlayerForm": {
       "actionField": "Action to kill him",
+      "actionsExamples": "See actions example",
       "nameField": "Name of the player"
     },
     "PlayersTable": {
