--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -124,9 +124,6 @@
     "NavBar": {
       "games": "Games created"
     },
-    "PlayerActionSelector": {
-      "label": "Action to complete"
-    },
     "PlayerStatusBadge": {
       "alive": "Alive",
       "dead": "Dead"
@@ -231,6 +228,7 @@
     },
     "PlayerForm": {
       "actionField": "Action to kill him",
+      "actionsExamples": "See actions example",
       "nameField": "Name of the player"
     },
     "PlayersTable": {
